// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyframes basic 1`] = `
<div
  className="css-11l88"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes basic 2`] = `
Array [
  ".css-11l88{-webkit-animation:animation-1bi8wtt;animation:animation-1bi8wtt;}",
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes multiple keyframes object 1`] = `
<div
  className="css-11ra1pv"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes multiple keyframes object 2`] = `
Array [
  ".css-11ra1pv{-webkit-animation:animation-1bi8wtt 1s animation-1ajb83a;animation:animation-1bi8wtt 1s animation-1ajb83a;}",
  "@-webkit-keyframes animation-1ajb83a{from{color:green;}to{color:yellow;}}",
  "@keyframes animation-1ajb83a{from{color:green;}to{color:yellow;}}",
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes object 1`] = `
<div
  className="css-1iju4zp"
>
  animation-o4c3es
</div>
`;

exports[`keyframes object 2`] = `
Array [
  ".css-1iju4zp{-webkit-animation:animation-o4c3es 1s;animation:animation-o4c3es 1s;}",
  "@-webkit-keyframes animation-o4c3es{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-o4c3es{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes object with string keyframes 1`] = `
<div
  className="css-1mzl5he"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes object with string keyframes 2`] = `
Array [
  ".css-1mzl5he{-webkit-animation:animation-1bi8wtt 1s;animation:animation-1bi8wtt 1s;}",
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes without css call 1`] = `
<div
  className="css-11l88"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes without css call 2`] = `
Array [
  ".css-11l88{-webkit-animation:animation-1bi8wtt;animation:animation-1bi8wtt;}",
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;
